# humap_local_planner

./: .gitignore  CMakeLists.txt  LICENSE  README.md  blp_plugin.xml  package.xml  wiki.md
cfg/: HuberoPlanner.cfg  HumapPlanner.cfg
include/hubero_local_planner/: HuberoPlanner.h  HuberoPlannerROS.h  chc_cost_function.h  contextualized_cost_function.h  debug.h  defines.h  fformation_space_intrusion_cost_function.h  group.h  heading_change_smoothness_cost_function.h  heading_disturbance_cost_function.h  hubero_config.h  hubero_config_ros.h  hubero_planner.h  hubero_planner_ros.h  latched_stop_rotate_controller.h  obstacle_separation_cost_function.h  obstacles.h  passing_speed_cost_function.h  path_crossing_detector.h  person.h  person_disturbance_cost_function.h  personal_space_intrusion_cost_function.h  planner_state.h  recovery_manager.h  robot_footprint_model.h  slow_translation_cost_function.h  social_trajectory_generator.h  speedy_goal_cost_function.h  trajectory.h  ttc_cost_function.h  unsaturated_translation_cost_function.h  velocity_smoothness_cost_function.h  visualization.h  world.h  yield_way_crossing_manager.h
include/hubero_local_planner/fuzz/: processor.h  regions.h  social_behaviours_db.h  social_conductor.h  trapezoid_loc_dep.h  trapezoid_loc_indep.h  trapezoid_parted.h
include/hubero_local_planner/geometry/: angle.h  geometry.h  pose.h  quaternion.h  vector.h
include/hubero_local_planner/sfm/: inflator.h  sfm_debug.h  social_force_model.h  world.h
include/hubero_local_planner/utils/: converter.h  debug.h  shift_register.h  transformations.h  vector_calculations.h
include/hubero_local_planner/vis/: arrow.h  footprint.h  grid.h  grid_force.h  heat_cell.h  heatmap.h  line_list.h  marker_base.h  point.h  text.h
include/humap_local_planner/: contextualized_cost_function.h  defines.h  fformation_space_intrusion_cost_function.h  group.h  group_intrusion_detector.h  heading_change_smoothness_cost_function.h  heading_disturbance_cost_function.h  humap_config.h  humap_config_ros.h  humap_planner.h  humap_planner_ros.h  latched_stop_rotate_controller.h  map_grid_cost_function.h  obstacle_separation_cost_function.h  obstacles.h  passing_speed_cost_function.h  path_crossing_detector.h  person.h  personal_space_intrusion_cost_function.h  planner_state.h  recovery_manager.h  robot_footprint_model.h  social_trajectory_generator.h  speedy_goal_cost_function.h  trajectory.h  ttc_cost_function.h  unsaturated_translation_cost_function.h  velocity_smoothness_cost_function.h  visualization.h  world.h  yield_way_crossing_manager.h
include/humap_local_planner/fuzz/: processor.h  regions.h  social_conductor.h  trapezoid_loc_dep.h  trapezoid_loc_indep.h  trapezoid_parted.h
include/humap_local_planner/geometry/: angle.h  geometry.h  pose.h  quaternion.h  vector.h
include/humap_local_planner/sfm/: inflator.h  social_force_model.h
include/humap_local_planner/utils/: debug.h  shift_register.h  teb_utils.h  (+2 more)
matlab/: computeInternalForce.m  computeTwist.m  computeVelocityGlobal.m  compute_internal_force_sim.m  compute_twist_cases.m  compute_twist_sim.m  compute_velocity_global_test.m  drawVelocity.m  predictPose.m  test_computeThetaAlphaBetaAngle2014.m  twist_rotation_syms.m
scripts/: addPoses.m  adjustTwistProportional.m  adjustTwistWithAccAndGoalLimits.m  adjustTwistWithAccLimits.m  adjust_twist_with_acc_and_goal_limits_test.m  adjust_twist_with_acc_limits_test.m  computeBaseVelocityFromPoses.m  computeNextPose.m  computeNextPoseBaseVel.m  computeSqDist.m  computeTwist.m  computeVelocityFromPoses.m  computeVelocityGlobal.m  computeVelocityLocal.m  compute_next_pose_test.m  compute_twist_cases.m  compute_twist_sim.m  compute_velocity_global_test.m  compute_velocity_local_test.m  cost_fun_near_goal_decay.m  findTwistWithAccLimits.m  find_twist_with_acc_limits_test.m  footprint_cost_kernel_test.m  fov_vis.py  path_crossing_detector_gaussian.m  predictPose.m  saturateVelocity.m  social_conductor_behaviour_strength_test.m  subtractPoses.m  test_computeThetaAlphaBetaAngle2011.m  test_velocity_conversions.m  ttc_cost_fun_score.m  unitVectorFromAngle.m  unsaturated_trans_costs_scaling.m
scripts/group_intrusion_detector/: point_in_ellipse.m  point_in_ellipse_intersection.m  point_in_ellipse_relative.m
src/: chc_cost_function.cpp  contextualized_cost_function.cpp  fformation_space_intrusion_cost_function.cpp  group_intrusion_detector.cpp  heading_change_smoothness_cost_function.cpp  heading_disturbance_cost_function.cpp  hubero_config_ros.cpp  hubero_local_planner.cpp  hubero_local_planner_ros.cpp  hubero_planner.cpp  hubero_planner_ros.cpp  humap_config_ros.cpp  humap_planner.cpp  humap_planner_ros.cpp  latched_stop_rotate_controller.cpp  map_grid_cost_function.cpp  obstacle_separation_cost_function.cpp  passing_speed_cost_function.cpp  path_crossing_detector.cpp  person.cpp  person_disturbance_cost_function.cpp  personal_space_intrusion_cost_function.cpp  planner_state.cpp  recovery_manager.cpp  slow_translation_cost_function.cpp  social_trajectory_generator.cpp  speedy_goal_cost_function.cpp  test_executable.cpp  ttc_cost_function.cpp  unsaturated_translation_cost_function.cpp  velocity_smoothness_cost_function.cpp  visualization.cpp  world.cpp  yield_way_crossing_manager.cpp
src/fuzz/: processor.cpp  social_behaviours_db.cpp  social_conductor.cpp  trapezoid_loc_dep.cpp  trapezoid_loc_indep.cpp  trapezoid_parted.cpp
src/geometry/: angle.cpp  pose.cpp  quaternion.cpp  vector.cpp
src/sfm/: inflator.cpp  sfm_debug.cpp  social_force_model.cpp  world.cpp
src/utils/: transformations.cpp
src/vis/: arrow.cpp  footprint.cpp  grid.cpp  grid_force.cpp  heat_cell.cpp  heatmap.cpp  line_list.cpp  marker_base.cpp  point.cpp  text.cpp
test/: gtest_cout.h  test_fuzzy_inference_system.cpp  test_fuzzy_social_conductor.cpp  test_fuzzy_trapezoids_dynamic.cpp  test_geometry_angle.cpp  test_geometry_pose.cpp  test_geometry_quaternion.cpp  test_geometry_vector.cpp  test_planner_state.cpp  test_sfm.cpp  test_trajectory.cpp  test_velocity_conversions.cpp  test_world_generation.cpp
(+10 files in other folders)
